@@ -133,6 +133,9 @@ Since the invitations controller take care of all the invite/accept invitation p
 Instead, in your views, put a link to <tt>new_user_invitation_path</tt> or <tt>new_invitation_path(:user)</tt> or even <tt>/users/invitation/new</tt> to prepare and send an invitation.
 This email includes a link to accept the invitation like <tt>/users/invitation/accept?invitation_token=abcd123</tt>.
 
+Note that if the invitation_token is not present or not valid, the visitor is redirected to after_sign_out_path_for(resource_name).
+You can also overwrite after_update_path_for and after_sign_out_path_for to customize your redirect hooks. More on Devise's README, "Controller filters and helpers" section.
+
 == Controller filter
 
 InvitationsController adds <tt>authenticate_inviter!</tt> filter to restrict who can send invitations.
@@ -152,12 +155,13 @@ You would like to allow only admins to send invitations. To do so, simply overwr
 
 == I18n
 
-DeviseInvitable uses flash messages with I18n with the flash keys <tt>:send_instructions</tt> and <tt>:updated</tt>. To customize your app, you can modify the generated locale file:
+DeviseInvitable uses flash messages with I18n with the flash keys <tt>:send_instructions</tt>, <tt>:invitation_token_invalid</tt> and <tt>:updated</tt>. To customize your app, you can modify the generated locale file:
 
   en:
     devise:
       invitations:
         send_instructions: 'An email with instructions about how to set the password has been sent.'
+        invitation_token_invalid: 'The invitation token provided is not valid!'
         updated: 'Your password was set successfully. You are now signed in.'
 
 You can also create distinct messages based on the resource you've configured using the singular name given in routes:
@@ -167,6 +171,7 @@ You can also create distinct messages based on the resource you've configured us
       invitations:
         user:
           send_instructions: 'A new user invitation has been sent.'
+          invitation_token_invalid: 'The invitation token provided is not valid!'
           updated: 'Welcome on board! You are now signed in.'
 
 The DeviseInvitable mailer uses the Devise pattern to create subject messages:
