@@ -2,6 +2,7 @@ en:
   devise:
     invitations:
       send_instructions: 'An invitation email has been sent to %{email}.'
+      invitation_token_invalid: 'The invitation token provided is not valid!'
       updated: 'Your password was set successfully. You are now signed in.'
     mailer:
       invitation_instructions:
